<?xml version="1.0"?>
<package format="2">

  <name>mrs_errorgraph</name>
  <version>1.0.0</version>
  <description>
      An aggregator of states of key components from the MRS (Multi-Robot System) serves as a centralized monitoring system to provide real-time insights into the current status of the entire robotic system.
  </description>

  <maintainer email="vrbamato@fel.cvut.cz">Matouš Vrba</maintainer>
  <author email="vrbamato@fel.cvut.cz">Matouš Vrba</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>roscpp</depend>
  <depend>mrs_lib</depend>
  <depend>message_generation</depend>

</package>
